fix: glossary icon and explore searchbox alignment css changes

--- a/server/zanata-frontend/src/frontend/app/containers/Explore/index.less
+++ b/server/zanata-frontend/src/frontend/app/containers/Explore/index.less
@@ -44,9 +44,9 @@
   font-style: inherit;
   outline: 0;
   width: 80%;
-  padding-left: @spacing-hr;
-  padding-right: @spacing-hr;
-  margin-left: -1.5rem;
+  padding-left: @spacing-xlarge;
+  padding-right: 0;
+  margin-left: -1.75rem;
 }
 
 .searchView .listInline {
