--- a/server/zanata-frontend/src/frontend/app/containers/Glossary/index.less
+++ b/server/zanata-frontend/src/frontend/app/containers/Glossary/index.less
@@ -50,7 +50,7 @@ table.glossaryEntry .hidesmall.td-2 .textInput {
 }
 
 h1.glossaryHeader-title .iconLocked {
-  vertical-align: baseline;
+  vertical-align: baseline !important;
 }
 
 .glossaryTable {
