--- a/server/zanata-frontend/src/frontend/app/styles/style.less
+++ b/server/zanata-frontend/src/frontend/app/styles/style.less
@@ -5217,7 +5217,7 @@ i.i--left.i--lock, i.i--left.i--trash {
   .containerSidebar {
     margin-left: 4.5rem;
     width: 100%;
-    margin-bottom: 1rem;
+    padding-bottom: 1rem;
   }
   .containerEditor {
     margin-left: 4.5rem;
